// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballSummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-bxivhb kplfa"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballSummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-bxivhb kplfa"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
